# badude

./: .gitignore  README.md  client.spec  pyproject.toml  requirements-client.txt  requirements-server.txt  server.spec
badude/: dns_codec.py  protocol.py
badude/client/: __main__.py  dns_client.py  web.py
badude/client/static/: index.html
badude/server/: __main__.py  dns_server.py  scraper.py  store.py
